--- a/order.html
+++ b/order.html
@@ -8,31 +8,33 @@
   <link rel="shortcut icon" href="favicon2.ico" type="favicon.ico">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/cart.css">
 </head>
 
 <body>
   <div class="container">
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid"> 
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="logo2tr.png" alt="Logo" height="80"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse"
+          aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="collapse">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Hem</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="produkter.html">Produkter</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="om-oss.html">Om oss</a>
-              </li>
-            </ul>
-    </div>
-  </div>
-</nav>
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="produkter.html">Produkter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="om-oss.html">Om oss</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </div>
   <div class="container pt-5">
 
@@ -42,44 +44,48 @@
     <div class="form-container">
       <form id="order-form" method="post" class="needs-validation" novalidate>
         <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 mb-2">
-        <label for="namn" class="form-label">Namn</label>
-        <input type="namn" name="namn" id="namn" placeholder="Förnamn Efternamn" class="form-control" maxlength="50">
-        <div class="invalid-feedback">
-          Ange ett giltigt namn.
-        </div>
-        </div>
-        </div>
-        <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 mb-2">
-        <label for="telefon" class="form-label">Telefonnummer</label>
-        <input type="telefon" name="telefon" id="telefon" placeholder="Telefonnummer" class="form-control" maxlength="50">
-        <div class="invalid-feedback">
-          Ange ett giltigt nummer.
-        </div>
-        </div>
+          <div class="col-md-2"></div>
+          <div class="col-md-8 mb-2">
+            <label for="namn" class="form-label">Namn</label>
+            <input type="namn" name="namn" id="namn" placeholder="Förnamn Efternamn" class="form-control"
+              maxlength="50">
+            <div class="invalid-feedback">
+              Ange ett giltigt namn.
+            </div>
+          </div>
         </div>
         <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 mb-2">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" name="email" id="email" placeholder="name@example.com" class="form-control" maxlength="50">
-        <div class="invalid-feedback">
-          Ange en giltig emailadress.
-        </div>
-        </div>
+          <div class="col-md-2"></div>
+          <div class="col-md-8 mb-2">
+            <label for="telefon" class="form-label">Telefonnummer</label>
+            <input type="telefon" name="telefon" id="telefon" placeholder="Telefonnummer" class="form-control"
+              maxlength="50">
+            <div class="invalid-feedback">
+              Ange ett giltigt nummer.
+            </div>
+          </div>
         </div>
         <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 mb-2">
-        <label for="namn" class="form-label">Leveransadress</label>
-        <input type="adress" name="Leveransadress" id="adress" placeholder="Gatuadress Postnummer Ort" class="form-control" maxlength="107">
-        <div class="invalid-feedback">
-          Ange en giltig adress.
+          <div class="col-md-2"></div>
+          <div class="col-md-8 mb-2">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" name="email" id="email" placeholder="name@example.com" class="form-control"
+              maxlength="50">
+            <div class="invalid-feedback">
+              Ange en giltig emailadress.
+            </div>
+          </div>
         </div>
-        </div>
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-8 mb-2">
+            <label for="namn" class="form-label">Leveransadress</label>
+            <input type="adress" name="Leveransadress" id="adress" placeholder="Gatuadress Postnummer Ort"
+              class="form-control" maxlength="107">
+            <div class="invalid-feedback">
+              Ange en giltig adress.
+            </div>
+          </div>
         </div>
 
         <div class="btn-wrapper">
@@ -99,9 +105,11 @@
           <div class="modal-body">
             <i style="font-size: 30px;">Tack för din beställning, <span id="modalName"></span>!</i>
             <hr>
-            <p style="font-size: 30px;">Produkt: </p>
-            <p><span id="modalProductName"></p></span>
-            <p><span id="modalProductPrice"></span></p>
+            <p style="font-size: 30px;">Order: </p>
+            <div id="order-products">
+
+            </div>
+            <p><span class="badge bg-success" id="modalTotal"></span></p>
             <p style="font-size: 30px;">Leveransadress: </p>
             <p><span id="modalName"></span></p>
             <p><span id="modalAddress"></span></p>
@@ -119,11 +127,14 @@
   <footer>
     <div class="container text-center">Copyright &copy; <span id="cRyear"></span>
     </div>
-</footer>
-<script src="js/main.js"></script>
-<script src="js/script.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </footer>
+  <script src="js/main.js"></script>
+  <script src="js/script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
