--- a/produkter.html
+++ b/produkter.html
@@ -1,79 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webbshop - Produkter</title>
-    <link rel="shortcut icon" href="favicon2.ico" type="favicon.ico" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/custom.css" />
-    <link rel="stylesheet" href="css/product.css" />
-  </head>
 
-  <body>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"
-            ><img src="logo2tr.png" alt="Logo" height="80"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapse"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Webbshop - Produkter</title>
+  <link rel="shortcut icon" href="favicon2.ico" type="favicon.ico" />
+  <link rel="stylesheet" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="css/custom.css" />
+  <link rel="stylesheet" href="css/product.css" />
+  <link rel="stylesheet" href="css/cart.css" />
+</head>
+
+<body>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="logo2tr.png" alt="Logo" height="80" /></a>
+
+        <div class="navbar-collapse collapse" id="collapse">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="produkter.html">Produkter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="om-oss.html">Om oss</a>
+            </li>
+          </ul>
+        </div>
+        <div class="d-flex">
+          <div class="icon-cart" onclick="cartToggler()" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-cart"
+            aria-controls="offcanvas-cart">
+            <svg class="text-body-secondary" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="48"
+              height="30" fill="none" viewBox="0 0 24 24">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312" />
+            </svg>
+            <span class="badge bg-primary rounded-pill" id="cart-counter">0</span>
+          </div>
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="navbar-collapse collapse" id="collapse">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Hem</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="produkter.html"
-                  >Produkter</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="om-oss.html">Om oss</a>
-              </li>
-            </ul>
-          </div>
         </div>
-      </nav>
-    </div>
-    <div class="container pt-5">
-      <!-- Produkerna listas här -->
-      <h2 id="product-page">Produkter</h2>
-      <div class="row" id="product-list"></div>
+      </div>
+    </nav>
+  </div>
+  <div class="container pt-5">
+    <!-- Produkerna listas här -->
+    <h2 id="product-page">Produkter</h2>
+    <div class="row" id="product-list"></div>
     <hr />
     <footer>
-     <div class="container text-center">
-      Copyright &copy; <span id="cRyear"></span>
-    </div>
-  </footer>
-  <!--offcanvas-->
-  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas-product" aria-labelledby="offcanvas-product-title">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvas-product-title">Offcanvas title</h5>
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div id="offcanvas-product-description" class="offcanvas-body">
-      Offcanvas product description.
+      <div class="container text-center">
+        Copyright &copy; <span id="cRyear"></span>
+      </div>
+    </footer>
+    <!--offcanvas description-->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas-product"
+      aria-labelledby="offcanvas-product-title">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvas-product-title">Offcanvas title</h5>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div id="offcanvas-product-description" class="offcanvas-body">
+        Offcanvas product description.
       </div>
     </div>
-     </div>
+    <!--offcanvas cart-->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas-cart" aria-labelledby="offcanvas-cart-title">
+      <div class="offcanvas-header">
+        <h4 class="offcanvas-title" id="offcanvas-cart-title">Cart</h4>
+
+        <span id="empty-cart" class="empty text-danger">
+          <svg class="empty w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            width="24" height="24" fill="none" viewBox="0 0 24 24">
+            <path class="empty" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z" />
+          </svg>
+        </span>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+
+      </div>
+      <div class="offcanvas-body">
+
+        <div class="cart-list" id="cart-list">
+
+        </div>
+
+      </div>
+      <div id="total" class="badge bg-secondary">
+        <span class="label">Subtotal:</span> <span id="amount"></span>
+      </div>
+      <button class="btn btn-outline-success checkout-button">checkout</button>
+    </div>
+  </div>
   <script src="js/script.js"></script>
+  <script src="js/cart.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
-  
-  
-  
